Fix presentation for TravisCI

--- a/presentations/initial/index.html
+++ b/presentations/initial/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>week3</title>
+		<title>OrgES</title>
 
-		<meta name="description" content="Illuminated Ring is an optical finger display for drinking behavior">
-		<meta name="author" content="Bengt Lüers, Timo Schoormann, Veronika Strokova">
+		<meta name="description" content="OrgES applies Organic Computing for Evolution Strategies">
+		<meta name="author" content="Renke Grunwald, Bengt Lüers, Jendrik Poloczek">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
