--- a/presentations/initial/index.html
+++ b/presentations/initial/index.html
@@ -19,7 +19,11 @@
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
-
+		<style>
+		.reveal pre {
+            font-size: .60em;
+        }
+        </style>
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 		<script>
 			document.write( '<link rel="stylesheet" href="reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
@@ -54,11 +58,11 @@
 			    // The "normal" size of the presentation, aspect ratio will be preserved
                 // when the presentation is scaled to fit different resolutions. Can be
                 // specified using percentage units.
-                width: 900,
-                height: 900,
+                width: 800,
+                height: 350,
 
                 // Factor of the display size that should remain empty around the content
-                margin: 0.1,
+                margin: 0.0,
 
                 // Bounds for smallest/largest possible scale to apply to content
                 minScale: 0.2,
